# tnschool2023

./: .buildinfo  .cruft.json  .gitignore  CHANGELOG.md  Dockerfile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: doc.yml  test.yml
_sources/: index.rst.txt
docs/contributing/: 1.-contributing-guide.md  4.-acknowledgements.md
docs/source/: conf.py
scripts/: clean.sh  lint.sh  test.sh
tnschool2023/: __init__.py
