[tool.poetry]
name = "tnschool2023"
version = "0.0.1"
description = "Tensor Network summer school 2023"
authors = ["Tan Tao-Lin <tanlin2013@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
tqdm = "^4.63.0"
numpy = "^1.22"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
commitizen = "^2.35.0"
vulture = "^2.4"
bandit = "^1.7.4"
safety = "^2.3.4"
isort = "^5.11.0"
flake8-bugbear = "^23.1.14"
Flake8-pyproject = "^1.2.2"
black = "^23.1.0"
mypy = "^1.0.0"
jupyter = "^1.0.0"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.9.0"
pep8-naming = "^0.13.0"
cruft = "^2.12.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.5.0"
sphinx-book-theme = "^0.3.2"
nbsphinx = "^0.8.8"
m2r2 = "^0.3.2"
pandoc = "^2.3"
#portray = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.flake8]
count = true
max-line-length = 100
ignore = [
    "E203",
    "W503"
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
plugins = ["numpy.typing.mypy_plugin"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
omit = ["*tests*"]

[tool.bandit]
skips = ["B101"]

[tool.cruft]
skip = []
